--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-hot-loader": "^4.6.3",
+    "react-paginate": "^6.2.1",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
     "webpack-dev-server": "^3.1.14"
